@@ -292,6 +292,7 @@ FLOAT_PROP_TEST("StageTimeoutFactor", complexTasks->, StageTimeoutFactor)
 FLOAT_PROP_TEST("CookerISLimit", mWinApp->mMultiTSTasks->, CkISLimit)
 FLOAT_PROP_TEST("MinTaskExposure", complexTasks->, MinTaskExposure)
 BOOL_PROP_TEST("UseTrialSizeForTasks", complexTasks->, UseTrialSize)
+FLOAT_PROP_TEST("EucentricityFineSubareaMeans", complexTasks->, FESizeOrFracForMean)
 FLOAT_PROP_TEST("RealignItemMinMarginNeeded", navHelper->, MinMarginNeeded)
 FLOAT_PROP_TEST("RealignItemMinMarginWanted", navHelper->, MinMarginWanted)
 FLOAT_PROP_TEST("RealignItemMaxMarginNeeded", navHelper->, MaxMarginNeeded)
