@@ -3060,6 +3060,13 @@
             and starts a new iteration (default 2).</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>EucentricityFineSubareaMeans</TD>
+          <TD>Follow with either a binned size in X and Y or fractions of camera field in X 
+            and Y to compute and print to the log the mean in a subarea of that size during 
+            the fine eucentricity procedure, adjusted for tilt-foreshortening and for the 
+            alignment shift of the image.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>ResetRealignMinField</TD>
           <TD>Minimum camera field of view, in microns, for resetting image shift and 
             realigning, which determines the mag used. Default is 7.</TD>
